Spacing fixes and module-nav fix

--- a/src/components/ids-button/ids-button.scss
+++ b/src/components/ids-button/ids-button.scss
@@ -124,6 +124,13 @@ button {
   }
 }
 
+:host(.ids-button-masthead.icon-logo),
+.ids-button-masthead.icon-logo {
+  &::part(button) {
+    top: var(--ids-masthead-logo-top-space-icon);
+  }
+}
+
 .ids-icon-button {
   @include ids-base-button-styles();
   @include ids-standard-button-colors();
